RESOLVED FIXED275952
AVVideoCaptureSource::setSessionSizeFrameRateAndZoom is exiting too early in case of different frame rate
https://bugs.webkit.org/show_bug.cgi?id=275952
Summary AVVideoCaptureSource::setSessionSizeFrameRateAndZoom is exiting too early in ...
youenn fablet
Reported 2024-06-27 06:19:20 PDT
Attachments
EWS
Comment 1 2024-06-27 10:25:09 PDT
Committed 280417@main (777429a3054a): <https://commits.webkit.org/280417@main> Reviewed commits have been landed. Closing PR #30233 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.