AVVideoCaptureSource::setSessionSizeFrameRateAndZoom is exiting too early in case of different frame rate rdar://130112520 https://bugs.webkit.org/show_bug.cgi?id=275952

Reviewed by Eric Carlson.

We wew only checking that frame rate range is matching, not that the frame rate is matching.
The range is something like [1, 30] or [1, 60], so we need to do actual frame rate matching.
This issue was hidden as frame rate adaptation happens later in the pipeline, but this is not good from a CPU point of view.

We change areSettingsMatching() to check whether the frame rate we want is matching with the device active min and max frame rate.

Manually tested on iPhone 15 Pro.

* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h:
* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::isFrameRateMatching):
(WebCore::AVVideoCaptureSource::areSettingsMatching const):
(WebCore::AVVideoCaptureSource::setSessionSizeFrameRateAndZoom):
(WebCore::isSameFrameRateRange): Deleted.

Canonical link: https://commits.webkit.org/280417@main